# hvactool

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  admin.html  autopull-sg.sh  deploy-sg.sh  deploy.sh  duct.html  energy.html  fix-nginx.sh  hydronic.html  index.html  install-autopull.sh  login.html  manifest.webmanifest  phcalc.html  psychro.html  quiz.html  refprops.html  server.py  sim.html  start.bat  sw.js  units.html  update-sg.sh
IOT/: CLAUDE.md
IOT/fdd/: .gitignore  CLAUDE.md  README.md  m0_acceptance.md  m1_acceptance.md  pyproject.toml  start_console.bat
IOT/fdd/app/: README.md  fdd_console.py  manual.md
IOT/fdd/app/static/: index.html
IOT/fdd/config/: calibration.yaml  unit_sku_map.yaml
IOT/fdd/data/: README.md
IOT/fdd/data/sample/: data_run_sample.xls  field_dictionary.xlsx
IOT/fdd/docs/: FDD-I-018.md  FDD系统开发文档_v1.0-A.md  FDD项目方案与待确认清单_v1.1.md  data_growth_regression.md  lab_injection_metadata_spec.md  m2_factory_recon.md  m2_lab_recon.md  m2_lab_recon_batch3.md
IOT/fdd/scripts/: gen_sat_table.py  smoke.py
IOT/fdd/src/fdd/: __init__.py  baseline.py  c4.py  config.py  conv.py  diag.py  drift.py  feat.py  label.py  sat_table.npz  seg.py  sense.py  valid.py  zoho_v2.py
IOT/fdd/tests/: conftest.py  test_m0_conv.py  test_m0_seg.py  test_m0_zoho_v2.py  test_m1_drift.py  test_m1_feat.py  test_m1_feat_fallback.py  test_m1_label.py  test_m1_placeholders.py  test_m1_sense.py  test_m1_valid.py  test_m2_condition_of.py  test_m2_envelope_input.py  test_m2_lab.py  test_m2_prodline.py
IOT/fdd/tests/fixtures/: zoho_synthetic.csv
css/: site.css  (+1 more)
(+57 files in other folders)
